--- a/attractions.html
+++ b/attractions.html
@@ -61,14 +61,14 @@
             It is also called the Niagara of India as it resembles Niagara Falls in the US. </figcaption>
         </figure>
             <figure>
-            <img src = "images/dance.jpg" class=dance alt= "Kathakali" width="200"/>
+            <img src = "images/dance.jpg" class="dance" alt= "Kathakali" width="200"/>
         <figcaption>
             Kathakali is a form of Indian classical dance that portrays a story through movements and expressions. 
             Many of these performances can be seen in the town called Varkala.
         </figcaption>
     </figure>
         <figure>
-        <img src = "images/caves.jpg" class=caves alt= "Edakkal Caves" width="200"/>
+        <img src = "images/caves.jpg" class="caves" alt= "Edakkal Caves" width="200"/>
         <figcaption>
             The Edakkal caves(pronounced ed-ah-kahl) are located in the Ambukthy Hills (pronounced ahm-book-thee) in the Wayanad district of Kerala. 
             These caves store drawings from the Stone Age while some are even believed go back 7000 years.
