--- a/clothing.html
+++ b/clothing.html
@@ -60,7 +60,7 @@
             </figcaption>
         </figure>
             <figure>
-        <img src = "images/sari.jpg" class=sari alt= "Mundum Neriyatum " width="200"/>
+        <img src = "images/sari.jpg" class="sari" alt= "Mundum Neriyatum " width="200"/>
         <figcaption>In Kerala, Men often wear the traditional clothing item called mundu (pronounced muhn-duh). 
             In special settings and celebrations, women in Kerala wear an attire known as mundum neriyatum (pronounced muhn-duh neh-ree-ah-tuhm). 
             This is a set of two mundus with a lower garment around one’s waist like men wear and an upper mundu which is wrapped around one’s upper body and left hanging from a shoulder. 
