--- a/food.html
+++ b/food.html
@@ -30,7 +30,7 @@
 <main>
 
 <div>
-    <p class=title>Breakfast:</p>
+    <p class="title">Breakfast:</p>
     <figure>
         <img src = "images/palappam.jpg" alt= "Palappam" width="200"/>
         <figcaption>This is a common breakfast food in Kerala named Palappam (pronounced pahl-up-uhm). 
@@ -49,7 +49,7 @@
     </figure>
 </div>
     <div>
-    <p class=title>Lunch:</p>
+    <p class="title">Lunch:</p>
     <figure>
         <img src = "images/biriyani.jpg" alt= "Thalasseri Biriyani" width="200"/>
         <figcaption>The Thalasseri (pronounced Thah-luh-shay-ree) Chicken Biriyani originating from the Thalasseri town of northern Kerala is a very famous, delicious dish. 
@@ -70,7 +70,7 @@
         </figure>
     </div>
    <div>
-    <p class=title>Dinner:</p>
+    <p class="title">Dinner:</p>
     <figure>
         <img src = "images/parotta.jpg" alt= "Parotta" width="200"/>
         <figcaption>Parotta (pronounced puh-roh-tah) is a layered flatbread made from a refined wheat flour. 
@@ -94,7 +94,7 @@
     </figure>
 </div>
 <div>
-    <p class=title>Dessert:</p>
+    <p class="title">Dessert:</p>
     <figure>
         <img src = "images/payasum.jpg" alt= "Payasum" width="200"/>
         <figcaption>Payasum (pronounced pai-yuh-sum) is a sweet pudding dish made up of milk, sugar, and rice. 
