--- a/attractions.html
+++ b/attractions.html
@@ -29,6 +29,10 @@
 
 
 <main>
+    <p>
+        Kerela, or God's Own Country, is a state filled with beautiful scenery. When visting a state like Kerela that
+        is known for its picturesque landscapes, there are numerous attractions that one must definitely check out!
+    </p>
     <figure>
         <img src = "images/teagardens.jpg" alt= "Munnar's Tea Gardens" width="200"/>
         <figcaption>The Tea Gardens which are located in Munnar, Kerala. 
